--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 *.zip
 *.tar.gz
 *.rar
-
+videoplayback.mp4
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-women-e598c-firebase-adminsdk-2nvya-385a16cd62.json
+adminKey.json
