--- a/JavaProject/app/src/main/AndroidManifest.xml
+++ b/JavaProject/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+        <activity android:name=".VideoPlayActivity"></activity>
         <activity android:name=".Register" />
         <activity android:name=".Login">
             <intent-filter>
