--- a/JavaProject/build.gradle
+++ b/JavaProject/build.gradle
@@ -3,6 +3,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        mavenLocal()
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.5'
