--- a/JavaProject/app/src/main/AndroidManifest.xml
+++ b/JavaProject/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".VideoPlayActivity"></activity>
+        <activity android:name=".Logout"></activity>
+        <activity android:name=".Settings" />
+        <activity android:name=".AccontReport" />
+        <activity android:name=".VideoPlayActivity" />
         <activity android:name=".Register" />
         <activity android:name=".Login">
             <intent-filter>
