--- a/JavaProject/app/build.gradle
+++ b/JavaProject/app/build.gradle
@@ -31,6 +31,9 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.exoplayer:exoplayer:2.9.6'
+
+
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
     implementation platform('com.google.firebase:firebase-bom:26.6.0')
