--- a/JavaProject/app/src/main/AndroidManifest.xml
+++ b/JavaProject/app/src/main/AndroidManifest.xml
@@ -6,19 +6,18 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".VideoPage"></activity>
+        <activity android:name=".VideoPage"
+            android:screenOrientation="landscape"
+            />
         <activity android:name=".About" />
         <activity android:name=".Dashboard" />
-        <activity android:name=".Logout" />
-        <activity android:name=".Settings" />
-        <activity android:name=".AccontReport" />
-        <activity android:name=".VideoPlayActivity" />
         <activity android:name=".Register" />
         <activity android:name=".Login">
             <intent-filter>
