fir Page Making

--- a/JavaProject/app/src/main/AndroidManifest.xml
+++ b/JavaProject/app/src/main/AndroidManifest.xml
@@ -6,16 +6,17 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
-        <activity android:name=".VideoPage"
-            android:screenOrientation="landscape"
-            />
+        android:theme="@style/Theme.MyApplication"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Fiir"></activity>
+        <activity
+            android:name=".VideoPage"
+            android:screenOrientation="landscape" />
         <activity android:name=".About" />
         <activity android:name=".Dashboard" />
         <activity android:name=".Register" />
